# phenopype

./: .coveralls.yml  .gitattributes  .gitignore  .gitignore.master  .pre-commit-config.yaml  .travis.yml  CHANGELOG.txt  CNAME  MANIFEST.in  README.md  README.md.orig  README.rst  README_old.md  __init__.py  annotations.json  appveyor.yml  azure-pipelines.yml  base.rst  conf.py  conf.py.orig  dist_fix.bat  dist_latest.bat  docs_build-OLD.bat  docs_build.bat  example.py  index.rst  make1.bat  make_gifs.py  manifest.in  out.yaml  pyproject.toml  pyproject.toml.orig  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_cov.bat  tox.ini  travis.yml
.github/workflows/: ci-trigger.yml  ci-ubuntu.yml  ci-windows.yml  python-app.yml  python-package.yml
docs_source/: README.md  citation.rst  conf.py  index.rst  quickstart.rst  tutorials.rst
docs_source/_assets/css/: custom.css
docs_source/_assets/js/: custom.js
docs_source/_templates/: base.html  page.html
docs_source/_templates/sidebar/: navigation.html
docs_source/api/: core.rst  index.rst  project.rst  project_labelling.rst  pype.rst  utility.rst  video.rst
docs_source/installation/: index.rst  phenopype.rst  python.rst  spyder.rst  text.rst
docs_source/resources/: cv.rst  index.rst  opencv.rst  python.rst  yaml.rst
docs_source/templates/: basic.rst  detection.rst  gallery.rst  index.rst  landmarks.rst  various.rst
gitignores/: .gitignore.deploy  .gitignore.fix  .gitignore.gh-pages  .gitignore.master
phenopype/: __init__.py  _config.py  _plugins.py  _vars.py  _version.py  base.py  config.py  custom.py  decorators.py  dev.py  extraction.py  landmarks.py  main.py  mask.py  morpho.py  ocr.py  postprocessing.py  preprocessing.py  presets.py  segmentation.py  settings.py  setup.py  tracking.py  utils.py  utils_lowlevel.py  utils_lowlevel.py.orig  visualization.py  yaml_configs.py
phenopype.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
phenopype/assets/: wc3_colours.html
phenopype/core/: __init__.py  export.py  ipython.html  measurement.py  preprocessing.py  segmentation.py  visualization.py
phenopype/phenopype.egg-info/: PKG-INFO
phenopype/plugins/: __init__.py  measurement.py  segmentation.py
phenopype/presets/: ex5_2.yaml  ex6.yaml  ex8_2.yaml
phenopype/settings/: colours.py  presets.py  pype_presets.py
phenopype/templates/: demo.yaml  ex1.yaml  ex2.yaml  ex3.yaml  ex5_1.yaml  ex5_2.yaml  ex6.yaml  ex7.yaml  ex8_1.yaml  ex8_2.yaml  tut3.yaml
tests/: conftest.py  settings.py  test_00_prep.py  test_01_project.py  test_02_core_preprocessing.py  test_03_core_segmentation.py  test_04_core_measurement.py  test_05_core_visualization.py  test_06_core_export.py  test_07_pype.py  test_08_tracking.py  test_09_utils.py  test_0_utils.py  test_10_utils_lowlevel.py  test_1_project.py  test_2_core_preprocessing.py  test_3_core_segmentation.py  test_4_core_measurement.py  test_5_core_visualization.py  test_6_core_export.py  test_7_pype.py  test_7_utils.py  test_8_tracking.py  test_9_utils.py  test_all.py  test_base.py  test_core_measurement.py  test_tracking.py  test_video_analysis.py  tests.py
tests/exclude/: test_08_tracking.py
tests/skip/: test_4_core_measurement.py  test_6_core_export.py  test_7_pype.py
tests/templates/: test1.yaml  test2.yaml  test3.yaml  test4.yaml
tests/test_templates/: test1.yaml  test2.yaml
(+19 files in other folders)
